sandbox/output
ParserWithCustomizedDelimiter.java:1: error: '{' expected
public class ParserWithCustomizedDelimiter implement StringCalculatorParser {
                                          ^
1 error
